docs/build/zh-Hans/api/5.9/knex/interface/Column.md
# Column<!-- -->

## Index[**](#Index)

### Properties

* [**autoincrement](#autoincrement)
* [**comment](#comment)
* [**default](#default)
* [**enumItems](#enumItems)
* [**extra](#extra)
* [**ignoreSchemaChanges](#ignoreSchemaChanges)
* [**length](#length)
* [**mappedType](#mappedType)
* [**name](#name)
* [**nullable](#nullable)
* [**precision](#precision)
* [**primary](#primary)
* [**scale](#scale)
* [**type](#type)
* [**unique](#unique)
* [**unsigned](#unsigned)

## Properties<!-- -->[**](#Properties)

### [**](#autoincrement)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L44)optionalautoincrement

**autoincrement?

<!-- -->

: boolean

### [**](#comment)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L50)optionalcomment

**comment?

<!-- -->

: string

### [**](#default)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L49)optionaldefault

**default?

<!-- -->

: null | string

### [**](#enumItems)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L51)optionalenumItems

**enumItems?

<!-- -->

: string\[]

### [**](#extra)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L55)optionalextra

**extra?

<!-- -->

: string

mysql only

### [**](#ignoreSchemaChanges)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L56)optionalignoreSchemaChanges

**ignoreSchemaChanges?

<!-- -->

: (type | extra)\[]

### [**](#length)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L46)optionallength

**length?

<!-- -->

: number

### [**](#mappedType)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L42)mappedType

**mappedType: [Type](https://mikro-orm.io/zh-Hans/zh-Hans/api/5.9/core/class/Type.md)\<unknown, unknown>

### [**](#name)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L40)name

**name: string

### [**](#nullable)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L45)optionalnullable

**nullable?

<!-- -->

: boolean

### [**](#precision)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L47)optionalprecision

**precision?

<!-- -->

: number

### [**](#primary)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L52)optionalprimary

**primary?

<!-- -->

: boolean

### [**](#scale)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L48)optionalscale

**scale?

<!-- -->

: number

### [**](#type)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L41)type

**type: string

### [**](#unique)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L53)optionalunique

**unique?

<!-- -->

: boolean

### [**](#unsigned)[**](https://github.com/mikro-orm/mikro-orm/blob/0b5bb40ab/packages/knex/src/typings.ts#L43)optionalunsigned

**unsigned?

<!-- -->

: boolean
