docs/build/zh-Hans/api/6.6/knex/interface/Column.md
# Column<!-- -->

## Index[**](#Index)

### Properties

* [**autoincrement](#autoincrement)
* [**comment](#comment)
* [**default](#default)
* [**enumItems](#enumItems)
* [**extra](#extra)
* [**generated](#generated)
* [**ignoreSchemaChanges](#ignoreSchemaChanges)
* [**length](#length)
* [**mappedType](#mappedType)
* [**name](#name)
* [**nativeEnumName](#nativeEnumName)
* [**nullable](#nullable)
* [**precision](#precision)
* [**primary](#primary)
* [**scale](#scale)
* [**type](#type)
* [**unique](#unique)
* [**unsigned](#unsigned)

## Properties<!-- -->[**](#Properties)

### [**](#autoincrement)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L59)optionalautoincrement

**autoincrement?

<!-- -->

: boolean

### [**](#comment)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L65)optionalcomment

**comment?

<!-- -->

: string

### [**](#default)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L64)optionaldefault

**default?

<!-- -->

: null | string

### [**](#enumItems)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L68)optionalenumItems

**enumItems?

<!-- -->

: string\[]

### [**](#extra)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L72)optionalextra

**extra?

<!-- -->

: string

mysql only

### [**](#generated)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L66)optionalgenerated

**generated?

<!-- -->

: string

### [**](#ignoreSchemaChanges)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L73)optionalignoreSchemaChanges

**ignoreSchemaChanges?

<!-- -->

: (type | extra | default)\[]

### [**](#length)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L61)optionallength

**length?

<!-- -->

: number

### [**](#mappedType)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L57)mappedType

**mappedType: [Type](https://mikro-orm.io/zh-Hans/zh-Hans/api/6.6/core/class/Type.md)\<unknown, unknown>

### [**](#name)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L55)name

**name: string

### [**](#nativeEnumName)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L67)optionalnativeEnumName

**nativeEnumName?

<!-- -->

: string

### [**](#nullable)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L60)optionalnullable

**nullable?

<!-- -->

: boolean

### [**](#precision)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L62)optionalprecision

**precision?

<!-- -->

: number

### [**](#primary)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L69)optionalprimary

**primary?

<!-- -->

: boolean

### [**](#scale)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L63)optionalscale

**scale?

<!-- -->

: number

### [**](#type)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L56)type

**type: string

### [**](#unique)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L70)optionalunique

**unique?

<!-- -->

: boolean

### [**](#unsigned)[**](https://github.com/mikro-orm/mikro-orm/blob/master/packages/knex/src/typings.ts#L58)optionalunsigned

**unsigned?

<!-- -->

: boolean
